fix menu not clickable coz of z-index

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -525,7 +525,6 @@ ul.options {
 }
 
 #menu {
-    z-index: -1;
     top: 66px;
     left: 0;
     background-color: #333;
